--- a/WidgetDemo/app/src/main/res/layout/activity_main.xml
+++ b/WidgetDemo/app/src/main/res/layout/activity_main.xml
@@ -13,5 +13,14 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Hello World!"
+        android:id="@+id/TextView022" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/TextView022"
+        android:layout_alignParentStart="true"
+        android:id="@+id/TextView044" />
 </RelativeLayout>
