--- a/WidgetDemo/app/src/main/res/layout/widget_layout.xml
+++ b/WidgetDemo/app/src/main/res/layout/widget_layout.xml
@@ -27,4 +27,10 @@
         android:layout_gravity="center"
         android:gravity="center_horizontal|center_vertical"
         android:layout_margin="4dip" />
+
+    <Button
+        android:text="Refresh"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/button2" />
 </LinearLayout>
