--- a/WeatherWidget/app/src/main/res/drawable/bg_green.xml
+++ b/WeatherWidget/app/src/main/res/drawable/bg_green.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape android:shape="oval">
-            <size android:height="75dp" android:width="75dp"/>
-            <solid android:color="#178b34"/>
-            <stroke android:width="5dp" android:color="#aeab98"/>
+        <shape android:shape="rectangle">
+            <size android:height="75dp" android:width="150dp"/>
+            <solid android:color="#8bc34a"/>
+            <stroke android:width="2dp" android:color="#bdbdbd"/>
+            <corners android:radius="5dp"/>
         </shape>
     </item>
 </selector>
